# orange-sdk

./: .gitignore  ANDROID.md  CLAUDE.md  Cargo.toml  Package.swift  README.md  SWIFT.md  justfile  uniffi-android.toml  uniffi.toml
.github/workflows/: tests.yml
bindings/kotlin/orange-sdk-android/: build.gradle.kts  settings.gradle.kts
bindings/kotlin/orange-sdk-android/lib/: build.gradle.kts
bindings/kotlin/orange-sdk-android/lib/src/androidTest/kotlin/org/lightningdevkit/orangesdk/: AndroidLibTest.kt
bindings/kotlin/orange-sdk-android/lib/src/main/: AndroidManifest.xml
bindings/kotlin/orange-sdk-android/lib/src/main/kotlin/org/lightningdevkit/orangesdk/: Library.kt
bindings/kotlin/orange-sdk-jvm/: build.gradle.kts  gradle.properties  settings.gradle.kts
bindings/kotlin/orange-sdk-jvm/lib/: build.gradle.kts
bindings/kotlin/orange-sdk-jvm/lib/src/test/kotlin/org/lightningdevkit/orangesdk/: LibraryTest.kt
bindings/python/: pyproject.toml  setup.cfg
bindings/python/src/orange_sdk/: __init__.py
bindings/swift/: Package.swift
bindings/swift/OrangeSDKFFI.xcframework/: Info.plist
bindings/swift/OrangeSDKFFI.xcframework/ios-arm64/OrangeSDKFFI.framework/Headers/: OrangeSDKFFI-umbrella.h  OrangeSDKFFI.h
bindings/swift/OrangeSDKFFI.xcframework/ios-arm64/OrangeSDKFFI.framework/Modules/: module.modulemap
bindings/swift/OrangeSDKFFI.xcframework/ios-arm64_x86_64-simulator/OrangeSDKFFI.framework/: Info.plist
bindings/swift/OrangeSDKFFI.xcframework/ios-arm64_x86_64-simulator/OrangeSDKFFI.framework/Headers/: OrangeSDKFFI.h
bindings/swift/OrangeSDKFFI.xcframework/macos-arm64_x86_64/OrangeSDKFFI.framework/: Info.plist
bindings/swift/Sources/OrangeSDK/: OrangeSDK.swift
bindings/uniffi-bindgen/: Cargo.toml
ci/: check-lint.sh
examples/cli/: .gitignore  Cargo.toml
examples/cli/src/: main.rs
graduated-rebalancer/: Cargo.toml
graduated-rebalancer/src/: lib.rs
orange-sdk/: Cargo.toml
orange-sdk/src/: builder.rs  dyn_store.rs  event.rs  lib.rs  lightning_wallet.rs  logging.rs  rebalance_monitor.rs  rebalancer.rs  runtime.rs  store.rs
orange-sdk/src/ffi/: bitcoin_payment_instructions.rs  cashu.rs  ldk_node.rs  macros.rs  mod.rs  spark.rs
orange-sdk/src/ffi/orange/: config.rs  error.rs  mod.rs  wallet.rs
orange-sdk/src/trusted_wallet/: dummy.rs  mod.rs  spark.rs
orange-sdk/src/trusted_wallet/cashu/: cashu_store.rs  mod.rs
orange-sdk/src/trusted_wallet/spark/: mod.rs  spark_store.rs
orange-sdk/tests/: integration_tests.rs  test_utils.rs
scripts/: create_android_maven_package.sh  format_kotlin.sh  swift_create_xcframework_archive.sh  swift_update_package_checksum.py  uniffi_bindgen_generate_kotlin.sh  uniffi_bindgen_generate_kotlin_android.sh  uniffi_bindgen_generate_python.sh  uniffi_bindgen_generate_swift.sh
src/: event.rs  lib.rs  lightning_wallet.rs  logging.rs  store.rs  trusted_wallet.rs
src/trusted_wallet/: dummy.rs  mod.rs  spark.rs
tests/: integration_tests.rs  test_utils.rs
