[workspace]
members = [
    "orange-sdk",
    "graduated-rebalancer",
    "examples/cli",
    "bindings/uniffi-bindgen",
]
default-members = ["orange-sdk"]
resolver = "2"

[profile.release-smaller]
inherits = "release"
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic

[workspace.dependencies]
bitcoin-payment-instructions = { version = "0.6.0" }
lightning = { version = "0.2.0" }
lightning-invoice = { version = "0.34.0" }
lightning-macros = "0.2.0"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
