[package]
name = "graduated-rebalancer"
version = "0.1.0"
edition = "2021"
description = "A library for managing graduated rebalancing between trusted and lightning wallets"
license = "MIT OR Apache-2.0"

[dependencies]
bitcoin-payment-instructions = { version = "0.4.0", features = ["http"] }
tokio = { version = "1", features = ["time", "rt", "macros"] }
lightning = { version = "0.1.5" }
lightning-invoice = { version = "0.33.2" }


[dev-dependencies]
tokio = { version = "1", features = ["full"] }