[package]
name = "graduated-rebalancer"
version = "0.1.0"
edition = "2021"
description = "A library for managing graduated rebalancing between trusted and lightning wallets"
license = "MIT OR Apache-2.0"

[dependencies]
bitcoin-payment-instructions = { path = "../../bitcoin-payment-instructions", features = ["http"] }
tokio = { version = "1", features = ["time", "rt", "macros"] }
lightning-invoice = { git = "https://github.com/tnull/rust-lightning", branch = "2025-08-bump-electrum-client-0.1", features = ["std"] }
lightning = { git = "https://github.com/tnull/rust-lightning", branch = "2025-08-bump-electrum-client-0.1", features = ["dnssec"] }



[dev-dependencies]
tokio = { version = "1", features = ["full"] }