[package]
name = "graduated-rebalancer"
version = "0.1.0"
edition = "2021"
description = "A library for managing graduated rebalancing between trusted and lightning wallets"
license = "MIT OR Apache-2.0"

[dependencies]
bitcoin-payment-instructions = { workspace = true }
lightning = { workspace = true }
lightning-invoice = { workspace = true }
tokio = { version = "1", default-features = false }
