[package]
name = "orange-sdk"
version = "0.1.0"
edition = "2024"
authors = ["benthecarman <benthecarman@live.com>"]
documentation = "https://docs.rs/orange-sdk/"
license = "MIT OR Apache-2.0"
keywords = ["lightning", "bitcoin", "spark", "cashu"]
readme = "../README.md"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "orange_sdk"

[features]
default = ["spark"]
uniffi = ["dep:uniffi", "spark", "cashu", "rand", "pin-project-lite"]
spark = ["breez-sdk-spark", "uuid", "serde_json"]
cashu = ["cdk", "serde_json"]
_test-utils = ["corepc-node", 'electrsd', "cashu", "uuid/v7", "rand"]
_cashu-tests = ["_test-utils", "cdk-ldk-node", "cdk/mint", "cdk-sqlite", "cdk-axum", "axum"]

[dependencies]
graduated-rebalancer = { path = "../graduated-rebalancer", version = "0.1.0" }

ldk-node = { version = "0.7.0" }
lightning-macros = { workspace = true }
bitcoin-payment-instructions = { workspace = true, features = ["http"] }
chrono = { version = "0.4", default-features = false }
rand = { version = "0.8.5", optional = true }
breez-sdk-spark = { git = "https://github.com/breez/spark-sdk.git", rev = "5f25eb6185950545e2ca170971667adc43c3544f", default-features = false, features = ["rustls-tls"], optional = true }
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread", "sync", "macros"] }
uuid = { version = "1.0", default-features = false, optional = true }
cdk = { version = "0.14.2", default-features = false, features = ["wallet"], optional = true }
serde_json = { version = "1.0", optional = true }
async-trait = "0.1"
log = "0.4.28"

corepc-node = { version = "0.10.1", features = ["29_0", "download"], optional = true }
electrsd = { version = "0.36.1", default-features = false, features = ["esplora_a33e97e1", "corepc-node_29_0"], optional = true }
cdk-ldk-node = { version = "0.14.2", optional = true }
cdk-sqlite = { version = "0.14.2", optional = true }
cdk-axum = { version = "0.14.2", optional = true }
axum = { version = "0.8.1", optional = true }

uniffi = { version = "0.29", default-features = false, features = ["cli"], optional = true }
pin-project-lite = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
test-log = "0.2.18"
