[project]
name = "orange_sdk"
version = "0.1.0"
authors = [
  { name="Ben Carman", email="benthecarman@live.com" },
]
description = "The simplest way to integrate Bitcoin and Lightning into your app."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://lightningdevkit.org/"
"Github" = "https://github.com/lightningdevkit/orange-sdk"
"Bug Tracker" = "https://github.com/lightningdevkit/orange-sdk/issues"